# envoy_translator-ui

./: README.rst  setup.cfg
envoy_translator_ui/api/: envoy_translator.py
envoy_translator_ui/content/forgot_password/: forms.py
envoy_translator_ui/content/forgot_password/templates/forgot_password/: _forgot_password_form.html
envoy_translator_ui/content/listeners/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
envoy_translator_ui/content/listeners/templates/listeners/: _create.html  _listener_detail_overview.html  create.html  index.html
envoy_translator_ui/content/quota/: tables.py
envoy_translator_ui/content/routes/: forms.py  panel.py  tables.py  urls.py  views.py
envoy_translator_ui/content/routes/templates/routes/: _update.html  create.html  detail.html  index.html  update.html
envoy_translator_ui/content/tasks/: panel.py
envoy_translator_ui/enabled/: _50_envoy_base.py  _50_external_access_group.py  _51_listeners_panel.py  _52_routes_panel.py  _6015_forgot_password.py
