[metadata]
name = envoy_translator-ui
summary = Envoy Translator User Interface
description-file =
    README.rst
author = Siyeong Song
author-email = cyoung06@naver.com
home-page = https://github.com/semicolon-cloud/envoy_translator-ui
python-requires = >=3.8
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    envoy_translator_ui